--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                       <a href="project1.html" class="project-link">View Project</a>
                     </div>
                     <div class="project-card">
-                        <img src="images/" alt="Project 2 Image" class="project-image">
-                        <h3>Project 2</h3>
-                      <p>This is another great project about [something].</p>
+                        <img src="images/LOVAI.png" alt="Project 2 Image" class="project-image">
+                        <h3>Lovai</h3>
+                      <p>An AI-powered virtual companion that understands you and engages in meaningful conversations for a unique and immersive experience..</p>
                       <a href="project2.html" class="project-link">View Project</a>
                       <a href="project2.zip" class="project-download">Download</a>
                     </div>
