--- a/index.html
+++ b/index.html
@@ -170,16 +170,16 @@
                     <div class="project-card">
                         <img src="images/LOVAI.png" alt="Project 2 Image" class="project-image">
                         <h3>Lovai</h3>
-                      <p>An AI-powered virtual companion that understands you and engages in meaningful conversations for a unique and immersive experience.</p>
+                      <p>An AI-powered virtual companion who understands you, chats with you, and makes every moment feel special.</p>
                       <a href="project2.html" class="project-link">View Project</a>
-                      <a href="project2.zip" class="project-download">Download</a>
+                      <a href="project2.html" class="project-link">View Video</a>
                     </div>
                     <div class="project-card">
                         <img src="images/" alt="Project 3 Image" class="project-image">
                         <h3>Project 3</h3>
                       <p>Yet another amazing project description goes here.</p>
                       <a href="project3.html" class="project-link">View Project</a>
-                      <a href="project3.zip" class="project-download">Download</a>
+                      <a href="project3.zip" class="project-download">View Video</a>
                     </div>
             </div>
         </div>
