--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                         <h3>HomeDoc</h3>
                       <p>An AI-powered virtual assistant that analyzes symptoms and guides users on managing common health issues.</p>
                       <a href="project1.html" class="project-link">View Project</a>
+                      <a href="project3.zip" class="project-download">View Video</a> 
                     </div>
                     <div class="project-card">
                         <img src="images/LOVAI.png" alt="Project 2 Image" class="project-image">
