--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <!-- My Projects Section -->
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="images/homedoc.png" alt="Project 1 Image" class="project-image">
+                        <img src="images/homedoc1.png" alt="Project 1 Image" class="project-image">
                         <h3>HomeDoc</h3>
                       <p>An AI-powered virtual assistant that analyzes symptoms and guides users on managing common health issues.</p>
                       <a href="project1.html" class="project-link">View Project</a>
