--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <ul class="header-social"> <!--===== Header Social =====-->
               <li><a href="https://www.youtube.com/@Redissh"><i class="fab fa-youtube"></i></a></li>
               <li><a href="https://x.com/1redissh?s=11"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="https://github.com/redissh"><i class="fab fa-github"></i></a></li>
+              <li><a href="https://github.com/redissh"><i class="fab fa-steam"></i></a></li>
               <li><a href="#"><i class="fab fa-shopify"></i></a></li>
           </ul>
           <div class="container">
@@ -89,7 +89,7 @@
                           <div class="about-skills">
                               <div class="skill-item">
                                   <div class="skill-header">
-                                      <h6 class="skill-title">Python Skills</h6>
+                                      <h6 class="skill-title">Programming Skills</h6>
                                       <div class="skill-percentage">
                                           <p><span class="counter">75</span>%</p>
                                       </div>
@@ -115,7 +115,7 @@
                             </div> <!--===== Skill Item =====-->
                             <div class="skill-item">
                                 <div class="skill-header">
-                                    <h6 class="skill-title">AI and Machine Learning Skills</h6>
+                                    <h6 class="skill-title">Software Development Skills</h6>
                                     <div class="skill-percentage">
                                         <p><span class="counter">54</span>%</p>
                                     </div>
@@ -128,7 +128,7 @@
                             </div> <!--===== Skill Item =====-->
                             <div class="skill-item">
                                 <div class="skill-header">
-                                    <h6 class="skill-title">Cool</h6>
+                                    <h6 class="skill-title">Cool guy</h6>
                                     <div class="skill-percentage">
                                         <p><span class="counter">100</span>%</p>
                                     </div>
