--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <div class="home-text">
                       <h4>Hello, My Name Is</h4>
                       <h1>Redissh</h1>
-                      <span>Software Developer and YouTuber</span>
+                      <span>Software Developer, Game Developer and YouTuber</span>
                       <p>An entertaining software developer and YouTuber, blending humor and code to create engaging 
                         and educational content for tech enthusiasts.</p>
                            <a href="https://www.youtube.com/@Redissh" class="btn btn-1">Visit My YouTube Channel</a>
