--- a/index.html
+++ b/index.html
@@ -160,14 +160,6 @@
               </div> <!--===== Section Title =====-->
             </div>
                 <!-- My Projects Section -->
-                <div class="project-grid">
-                    <div class="project-card">
-                        <img src="images/homedoc1.png" alt="Project 1 Image" class="project-image">
-                        <h3>HomeDoc</h3>
-                      <p>An AI-powered virtual assistant that analyzes symptoms and guides users on managing common health issues.</p>
-                      <a href="project1.html" class="project-link">View Project</a>
-                      <a href="project3.zip" class="project-download">View Video</a> 
-                    </div>
                     <div class="project-card">
                         <img src="images/LOVAI.png" alt="Project 2 Image" class="project-image">
                         <h3>Lovai</h3>
@@ -176,6 +168,13 @@
                       <a href="project2.html" class="project-link">View Video</a>
                     </div>
                     <div class="project-card">
+                        <img src="images/" alt="Project 3 Image" class="project-image">
+                        <h3>Project 32</h3>
+                      <p>Another amazing project description goes here.</p>
+                      <a href="project3.html" class="project-link">View Project</a>
+                      <a href="project3.zip" class="project-download">View Video</a>
+                    </div>
+             <div class="project-card">
                         <img src="images/" alt="Project 3 Image" class="project-image">
                         <h3>Project 3</h3>
                       <p>Yet another amazing project description goes here.</p>
