--- a/index.html
+++ b/index.html
@@ -159,22 +159,23 @@
                   </ul>
               </div> <!--===== Section Title =====-->
             </div>
-                <!-- My Projects Section -->
+               <!-- My Projects Section -->
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="images/homedoc1.png" alt="Project 1 Image" class="project-image">
+                        <h3>Lovai</h3>
+                      <p>An AI-powered virtual companion who understands you, chats with you, and makes every moment feel special. 😍</p>
+                      <a href="project1.html" class="project-link">View Project</a>
+                      <a href="project3.zip" class="project-download">View Video</a> 
+                    </div>
                     <div class="project-card">
                         <img src="images/LOVAI.png" alt="Project 2 Image" class="project-image">
-                        <h3>Lovai</h3>
-                      <p>An AI-powered virtual companion who understands you, chats with you, and makes every moment feel special.</p>
+                        <h3>Project 2</h3>
+                      <p>An amazing project description goes here.</p>
                       <a href="project2.html" class="project-link">View Project</a>
                       <a href="project2.html" class="project-link">View Video</a>
                     </div>
                     <div class="project-card">
-                        <img src="images/" alt="Project 3 Image" class="project-image">
-                        <h3>Project 32</h3>
-                      <p>Another amazing project description goes here.</p>
-                      <a href="project3.html" class="project-link">View Project</a>
-                      <a href="project3.zip" class="project-download">View Video</a>
-                    </div>
-             <div class="project-card">
                         <img src="images/" alt="Project 3 Image" class="project-image">
                         <h3>Project 3</h3>
                       <p>Yet another amazing project description goes here.</p>
