--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                     </div>
                     <div class="project-card">
                         <img src="images/" alt="Project 2 Image" class="project-image">
-                        <h3>Project 2</h3>
-                      <p>An amazing project description goes here.</p>
+                        <h3>CoolCraft</h3>
+                      <p>A thrilling 3D open-world survival game where you battle epic bosses, craft unique items, and explore an infinite world! 🌍⚔️</p>
                       <a href="project2.html" class="project-link">View Project</a>
                       <a href="project2.html" class="project-link">View Video</a>
                     </div>
