--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                       <a href="project3.zip" class="project-download">View Video</a> 
                     </div>
                     <div class="project-card">
-                        <img src="images/" alt="Project 2 Image" class="project-image">
+                        <img src="images/CoolCraft.png" alt="Project 2 Image" class="project-image">
                         <h3>CoolCraft</h3>
                       <p>A thrilling 3D open-world survival game where you battle epic bosses, craft unique items, and explore an infinite world! 🌍⚔️</p>
                       <a href="project2.html" class="project-link">View Project</a>
