--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <section class="home-section" id="home">
           <ul class="header-social"> <!--===== Header Social =====-->
               <li><a href="https://www.youtube.com/@Redissh"><i class="fab fa-youtube"></i></a></li>
-              <li><a href="https://x.com/1redissh?s=11"><i class="fab fa-instagram"></i></a></li>
-              <li><a href="https://github.com/redissh"><i class="fab fa-steam"></i></a></li>
+              <li><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="https://steam.com"><i class="fab fa-steam"></i></a></li>
               <li><a href="#"><i class="fab fa-shopify"></i></a></li>
           </ul>
           <div class="container">
