--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
               <li><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
               <li><a href="https://steam.com"><i class="fab fa-steam"></i></a></li>
               <li><a href="#"><i class="fab fa-shopify"></i></a></li>
+              <li><a href="https://github.com/redissh"><i class="fab fa-github"></i></a></li>
           </ul>
           <div class="container">
               <div class="row align-items-center">
