--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <ul class="header-social"> <!--===== Header Social =====-->
               <li><a href="https://www.youtube.com/@Redissh"><i class="fab fa-youtube"></i></a></li>
               <li><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
-              <li><a href="https://steam.com"><i class="fab fa-steam"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/armendsulaj/"><i class="fab fa-linkedin"></i></a></li>
               <li><a href="#"><i class="fab fa-shopify"></i></a></li>
               <li><a href="https://github.com/redissh"><i class="fab fa-github"></i></a></li>
           </ul>
